<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MedCheck</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="not_account">Don\'t have an account? Create\u0020</string>
    <string name="here">here</string>
    <string name="id">Test id:</string>
    <string name="status">Status:</string>
    <string name="none">-</string>
    <string name="checked_by">Checked by:</string>
    <string name="mobile_number">Mobile Number (i.e: 01XXXXXXXXX)</string>
    <string name="date">Date:</string>
    <string name="height_cm">Height(cm)</string>
    <string name="weight">Weight(Kg)</string>
    <string name="bpm">BPM</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="glucose_level">Glucose Level</string>
    <string name="oxygen_level">Oxygen Level</string>
    <string name="temperature">Temperature</string>
    <string name="problem_details">Problem Details</string>
    <string name="create_test">Create Test</string>
    <string name="feet_inch">Feet-Inch</string>
    <string name="cm">Cm</string>
    <string name="height_inch">Height(inch)</string>
    <string name="height_feet">Height(feet)</string>
    <string name="patient_name">Patient Name:</string>
    <string name="height">Height:</string>
    <string name="test_weight">Weight:</string>
    <string name="test_bmi">BMI:</string>
    <string name="test_bpm">BPM:</string>
    <string name="test_oxygen_level">Oxygen Level:</string>
    <string name="test_glucose_level">Glucose Level:</string>
    <string name="test_temperature">Temperature:</string>
    <string name="test_problem_details">Problem Details:</string>
    <string name="test_status">Status:</string>
    <string name="in_queue">In Queue</string>
    <string name="test_checked_by">Checked By:</string>
    <string name="test_date">Date:</string>
    <string name="log_out">Log Out</string>
    <string name="profile_full_name">Full Name:</string>
    <string name="user_email">Email:</string>
    <string name="user_mobile_number">Mobile Number:</string>
    <string name="account_type">Account Type:</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_user">save user</string>
    <string-array name="speciality_type">
        <item>Medicine</item>
        <item>Oncologist</item>
        <item>Orthopedic</item>
        <item>Endocrinologist</item>
        <item>Gynecologist</item>
        <item>Child Specialist</item>
        <item>ENT</item>
        <item>Nutritionist</item>
        <item>Dentist</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blood_type">Blood Type</string>
    <string name="user_blood_type">Blood Type:</string>
    <string name="prescription">Prescription</string>
    <string name="create_prescription">Create Prescription</string>
    <string name="title_choose_file">Choose Image</string>
    <string name="title_choose" tools:override="true">Choose</string>
    <string name="dialog_cancel" tools:override="true">Cancel</string>
    <string name="send_password_recovery_mail">Send Password Recovery mail</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="weight_status">Weight Status:</string>
    <string name="birthday">Birthday:</string>
    <string name="text_none">None</string>
    <string name="edit_test">Edit Test</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="degree">Degree</string>
    <string name="current_designation">Current Designation</string>
    <string name="user_doctor_type">Doctor Type:</string>
    <string name="user_degree">Degree:</string>
    <string name="user_current_designation">Current Designation:</string>
    <string name="all">All</string>
    <string name="my">My</string>
    <string name="time">Time</string>
    <string name="request_new_appointment">request new appointment</string>
    <string name="doctor_name">Doctor Name:</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="scheduled">Scheduled</string>
    <string name="requested">Requested</string>
</resources>